[tool.poetry]
name = "creditcard"
version = "0.1.0"
description = ""
authors = ["GuiCastroo <gscastroo15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
cryptography = "^41.0.5"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.22"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
fastapi-pagination = "^0.12.12"
httpx = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
